2009-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStrip.cs: Even if we are not exactly a MenuStrip instance, close
	any ToolStripDropDownItem when receiving a mouse down event in an
	empty area.

2009-04-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* ToolBarButton.cs: add UIA events for style and dropdownmenu changes.

2009-04-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* ToolBarButton.cs: rename a method to include UIA prefix.

2009-04-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* ToolBarButton.cs: change visibility of some UIA methods from
	protected virtual to private.

2009-04-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripDropDown.cs: In OnVisibleChanged, if we have an OwnerItem,
	fire OnDropDownOpened/OnDropDownClosed depending on the new
	visibility. This also ensures that any direct access to this instance
	will fire the mentioned events for the OwnerItem.
	* ToolStripDropDownItem.cs: Remove the invocations to
	OnDropDownOpened/OnDropDownClosed, since they are handled in
	ToolStripDropDown, as well as updating the
	OnDropDownHide/OnDropDownShow calls to be in the right order.
	Fixes #496193.

2009-04-21  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Control.cs, ContextMenuStrip.cs, ToolStripMenuItem.cs: Only process any 
	shortchut in ToolStripMenuItem.ProcessCmdKey if the control generating the 
	event is the same as the owner of the menu item. Also set properly 
	SourceControl for ContextMenuStrip, as well as add an internal field to 
	contain the control that owns the ContextMenuStrip (we need to know this 
	even before the public property is assigned).
	Fixes bits of #393775.

2009-04-20  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* StatusStrip.cs: Use the same icon as .net when the mouse is over the
	size grip.
	Fixes #492828.

2009-04-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When calculating the height of the ComboListBox,