@@ -1,3 +1,11 @@
+2009-04-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ToolStripDropDownItem.cs: When assigning a new
+	ToolStripDropDownMenu, let it know we are its OwnerItem. This way the
+	Capture duties performed by Application/ToolStripManager are handled
+	nicely and we don't end up in an inconsisten stat.
+	Fixes #492815.
+
 2009-04-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* ToolStrip.cs: Even if we are not exactly a MenuStrip instance, close
